--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ network-renet = ["renet", "renet_netcode"]
 network-tokio = []
 
 [dependencies]
-common = { path = "../rheia-common" }
+common = { path = "../brilliance-common" }
 
 serde = { version = "1.0", features = ["derive"] }
 log = { version = "0.4" }
@@ -44,5 +44,5 @@ ndcopy = "0.3"
 # Network
 tokio = { version = "1.44", features = [ "full" ] }
 
-renet = { version = "1.2", features = ["bevy"], optional = true }
+renet = { version = "1.2", features = [], optional = true }
 renet_netcode = { version = "1.2", optional = true }
