--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,17 @@ edition = "2021"
 
 [features]
 # default = ["network-tokio"]
-default = ["network-renet"]
+default = ["network-renet", "use-local"]
 
 network-renet = ["renet", "renet_netcode"]
 network-tokio = []
 
+use-local = ["common-local"]
+use-git = ["common-git"]
+
 [dependencies]
-common = { path = "../brilliance-common" }
+common-local = { path = "../brilliance-common", package = "brilliance-common", optional = true }
+common-git = { git = "https://github.com/In-Its-Brilliance/brilliance-common", optional = true }
 
 serde = { version = "1.0", features = ["derive"] }
 log = { version = "0.4" }
