--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ use-local = ["common-local"]
 use-git = ["common-git"]
 
 [dependencies]
-common-local = { path = "../brilliance-common", package = "brilliance-common", optional = true }
-common-git = { git = "https://github.com/In-Its-Brilliance/brilliance-common", optional = true }
+common-local = { path = "../brilliance-common", package = "common", optional = true }
+common-git = { git = "https://github.com/In-Its-Brilliance/brilliance-common", package = "common", optional = true }
 
 serde = { version = "1.0", features = ["derive"] }
 log = { version = "0.4" }
