--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,12 @@ use-git = ["common-git"]
 
 [dependencies]
 common-local = { path = "../brilliance-common", package = "common", optional = true }
-common-git = { git = "https://github.com/In-Its-Brilliance/brilliance-common", package = "common", optional = true }
+common-git = {
+    git = "https://github.com/In-Its-Brilliance/brilliance-common",
+    package = "common",
+    optional = true,
+    features = ["use-git"],
+}
 
 serde = { version = "1.0", features = ["derive"] }
 log = { version = "0.4" }
