--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,7 @@ use-git = ["common-git"]
 
 [dependencies]
 common-local = { path = "../brilliance-common", package = "common", optional = true }
-common-git = {
-    git = "https://github.com/In-Its-Brilliance/brilliance-common",
-    package = "common",
-    optional = true,
-}
+common-git = { git = "https://github.com/In-Its-Brilliance/brilliance-common", package = "common", optional = true }
 
 serde = { version = "1.0", features = ["derive"] }
 log = { version = "0.4" }
