--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,17 +5,13 @@ edition = "2021"
 
 [features]
 # default = ["network-tokio"]
-default = ["network-renet", "use-local"]
+default = ["network-renet"]
 
 network-renet = ["renet", "renet_netcode"]
 network-tokio = []
 
-use-local = ["common-local"]
-use-git = ["common-git"]
-
 [dependencies]
-common-local = { path = "../brilliance-common", package = "common", optional = true }
-common-git = { git = "https://github.com/In-Its-Brilliance/brilliance-common", package = "common", optional = true }
+common = { git = "https://github.com/In-Its-Brilliance/brilliance-common" }
 
 serde = { version = "1.0", features = ["derive"] }
 log = { version = "0.4" }
