--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ flume = "0.11"
 num = "0.4"
 rand = "0.9"
 trust-dns-resolver = { version = "0.23", features = ["dns-over-rustls", "tokio-runtime"] }
+socket2 = "0.6"
 
 # Scripts
 rhai = { version = "1.21", features = ["internals", "serde"] }
