--- a/examples/consistency/Cargo.toml
+++ b/examples/consistency/Cargo.toml
@@ -1,20 +1,15 @@
 [package]
-name = "network-test"
+name = "network-consistency"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 network = { path = "../../" }
+common = { git = "https://github.com/In-Its-Brilliance/brilliance-common" }
 
-rustyline = { version = "14.0.0", features = ["with-file-history", "derive"] }
-lazy_static = "1.4.0"
-flume = "0.11.0"
-tokio = { version = "1.41.1", features = [ "full" ] }
+tokio = { version = "1.41.1", features = ["full"] }
 bincode = "1.3.2"
-
 log = { version = "0.4" }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-
-# ARGS
 clap = { version = "4.4.18", features = ["string", "derive"] }
